mario/update 1.4: add final additions for char page and initial fixes for Wiki page
Add two new placeholder icons for search bar on the Character page.
Add compact version of the character page layout for 1920x1080 downscaled (1600x900).
Fix overflowing header/text content in tables on the Wiki page.
Fix transparent text + arrow on the side menu within Wiki page.
Add first working iteration of side menu positioning fix for Wiki page. Further work is in order.

--- a/CSS/characterCSS.css
+++ b/CSS/characterCSS.css
@@ -298,8 +298,11 @@ main {
 .toggle-search-image {
   width: 100%;
   height: 100%;
-  background-image: url(/images/Icons/arrow-clockwise-fill.png);
+  background-image: url(/images/Icons/magnifying-glass-bold.png);
   background-size: cover;
+}
+.search-char-active {
+  background-image: url(/images/Icons/user-rectangle-bold.png);
 }
 
 #char-name-section,
@@ -390,7 +393,8 @@ main {
   width: 220px;
 }
 
-.element-segment .tooltip::after, .exp-bar .tooltip::after {
+.element-segment .tooltip::after,
+.exp-bar .tooltip::after {
   content: "";
   position: absolute;
   width: 0;
@@ -862,13 +866,13 @@ main {
   top: 6px;
   opacity: 0;
 }
-.detail-section div{
+.detail-section div {
   display: flex;
   height: 100%;
   align-items: center;
 }
 
-.detail-section div h1{
+.detail-section div h1 {
   font-weight: normal;
 }
 
@@ -1157,4 +1161,32 @@ main {
 .appli-highlight-Life {
   color: #ff69b4; /* Hot Pink */
   font-size: 20px;
+}
+
+/* Media Queries - For 125% Scaling at 1920 x 1080 */
+@media (max-width: 1868px) {
+  main {
+    padding: 0;
+  }
+  #content-container {
+    gap: 8px;
+    width: auto;
+  }
+  #slot-display {
+    gap: 8px;
+  }
+  #slot-buttons-container {
+    width: 1440px;
+  }
+  #top-container {
+    gap: 8px;
+  }
+  #detail-buttons button {
+    width: 70px;
+    height: 70px;
+    padding: 0.75rem;
+  }
+  #character-box-container {
+    width: 700px;
+  }
 }
